--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
   "name": "kdd-lab-website-frontend",
-  "version": "0.1.0",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "axios": "^0.27.2",
-    "bootstrap-icons": "^1.8.3",
-    "date-fns": "^2.28.0",
-    "next": "^12.3.4",
-    "next-auth": "^4.10.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0"
+    "@faker-js/faker": "^7.6.0",
+    "@popperjs/core": "2.11.7",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.1",
+    "chart.js": "^4.0.1",
+    "express": "^4.18.2",
+    "formidable": "^3.5.1",
+    "multer": "^1.4.5-lts.1",
+    "next": "13.2.3",
+    "photoswipe": "^5.4.2",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "18.2.0",
+    "react-input-range": "^1.3.0",
+    "react-modal-video": "^2.0.1",
+    "react-photoswipe-gallery": "2.2.7",
+    "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^8.0.4",
+    "react-slick": "^0.29.0",
+    "sass": "^1.54.9",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.4"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
-  },
-  "engines": {
-    "node": "16"}
-  
+    "@types/node": "20.8.4",
+    "eslint": "8.23.0",
+    "eslint-config-next": "13.2.3",
+    "typescript": "5.2.2"
+  }
 }
